--- a/index.html
+++ b/index.html
@@ -395,14 +395,22 @@
                             </div>
                     </div>
                 </section> </div> </div> </div> <script src="dex/js/modules/utils.js"></script>
-    <script src="dex/js/modules/constants.js"></script>
-    <script src="dex/js/modules/api.js"></script>
-    <script src="dex/js/modules/lightbox.js"></script>
-    <script src="dex/js/modules/dexGrid.js"></script>
-    <script src="dex/js/modules/detailView.js"></script>
-    <script src="dex/js/modules/tcgModule.js"></script>
-    <script src="dex/js/modules/generator.js"></script>
-    <script src="dex/js/app.js"></script>
+    <!-- First load core utilities -->
+<script src="dex/js/modules/constants.js"></script>
+<script src="dex/js/modules/utils.js"></script>
+<!-- Then load API module -->
+<script src="dex/js/modules/api.js"></script>
+<!-- Then load visual layer modules -->
+<script src="dex/js/modules/lightbox.js"></script>
+<!-- Then load feature modules -->
+<script src="dex/js/modules/dexGrid.js"></script>
+<script src="dex/js/modules/detailView.js"></script>
+<script src="dex/js/modules/tcgModule.js"></script>
+<script src="dex/js/modules/generator.js"></script>
+<!-- Finally load the main app -->
+<script src="dex/js/app.js"></script>
+<!-- Optional: Add diagnostics script last -->
+<script src="dex/js/diagnostic.js"></script>
 
 </body>
 </html>
