--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="dex/css/dex.css">
     <link rel="stylesheet" href="dex/css/loading.css">
     <link rel="stylesheet" href="dex/css/generator.css">
-    <link rel="stylesheet" href="dex/css/enhanced.css"> <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="dex/css/enhanced.css"> 
+    <link rel="stylesheet" href="dex/css/fix.css"> 
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon">
 
     <style>
         /* Minimal essential styles */
