--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
         />
 
         <link rel="stylesheet" href="dex/css/dex.css" />
-        <link rel="stylesheet" href="dex/css/loading.css" />
-        <link rel="stylesheet" href="dex/css/generator.css" />
         <link rel="stylesheet" href="dex/css/enhanced.css" />
-        <link rel="stylesheet" href="dex/css/fix.css" />
+        <link rel="stylesheet" href="dex/css/generator.css" />
+        
         <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
 
         <style>
@@ -1245,8 +1244,10 @@
                 </div>
             </div>
         </div>
+        
         <!-- Add loading.js before app.js but after all other modules -->
 <script src="dex/js/modules/constants.js"></script>
+<script src="dex/js/modules/glowEffect.js"></script>
 <script src="dex/js/modules/utils.js"></script>
 <script src="dex/js/modules/api.js"></script>
 <script src="dex/js/modules/lightbox.js"></script>
@@ -1258,5 +1259,6 @@
 <script src="dex/js/modules/loading.js"></script>
 <!-- Finally load the main app -->
 <script src="dex/js/app.js"></script>
+
     </body>
 </html>
